<resources>
    <string name="app_name">MyShrineApp</string>
    <string name="hint_username">UserName</string>
    <string name="hint_password">Password</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
    <string name="product_title">Title</string>
    <string name="product_description">Secondary text</string>
    <string name="shr_search_title">Search</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_product_title">Product</string>
    <string name="shr_product_description">Secondary text</string>

    <!-- Shrine backdrop menu labels -->
    <string name="shr_featured_label">Featured</string>
    <string name="shr_apartment_label">Apartment</string>
    <string name="shr_accessories_label">Accessories</string>
    <string name="shr_shoes_label">Shoes</string>
    <string name="shr_tops_label">Tops</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>
</resources>
